--- a/src/components/Form/MainForm.module.css
+++ b/src/components/Form/MainForm.module.css
@@ -25,15 +25,16 @@
 .form-container input,
 button {
   border-radius: 0.5rem;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   box-sizing: border-box;
   border: none;
   outline: none;
 }
 .form-container input {
+  width: 95%;
   display: block;
-  margin-bottom: 1rem;
-  width: 90%;
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
   padding: 0.4rem 0.5rem;
   border: 1px solid rgb(219, 215, 215);
 }
@@ -49,7 +50,6 @@ button {
     width: 70%;
   }
   .form-container input {
-    width: 80%;
     padding: 0.2rem;
     font-size: 1.5rem;
   }
@@ -64,5 +64,10 @@ button {
   .form-container button {
     padding: 0.3rem 0.4rem;
     font-size: 1rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .form-container {
+    width: 100%;
   }
 }
