--- a/src/pages/Myteam.module.css
+++ b/src/pages/Myteam.module.css
@@ -8,8 +8,7 @@
   width: 100%;
   height: 700px;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(../Images/back.jpg.crdownload) center/cover no-repeat;
-  /* background-attachment: fixed; */
+    url(../Images/background.jpg) center/cover no-repeat;
   padding-top: 1rem;
 }
 .myteam .button-container {
