--- a/src/pages/Myteam.module.css
+++ b/src/pages/Myteam.module.css
@@ -1,12 +1,12 @@
 .myteam {
-  width: 70%;
+  width: 50%;
 }
 
 .back {
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
   width: 100%;
-  height: 700px;
+  height: 500px;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(../Images/background.jpg) center/cover no-repeat;
   padding-top: 1rem;
@@ -28,5 +28,11 @@
   .myteam .button-container button {
     margin: auto;
     width: 40%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .myteam {
+    width: 85%;
   }
 }
