--- a/src/components/Form/MainForm.module.css
+++ b/src/components/Form/MainForm.module.css
@@ -24,7 +24,7 @@
 }
 .form-container input,
 button {
-  border-radius: 0.5rem;
+  border-radius: 0.3rem;
   font-size: 1.6rem;
   box-sizing: border-box;
   border: none;
@@ -68,6 +68,13 @@ button {
 }
 @media screen and (max-width: 400px) {
   .form-container {
-    width: 100%;
+    width: 90%;
+  }
+
+  .form-container input,
+  .form-container button {
+    padding: 0.2rem;
+    font-size: 1rem;
+    padding: 0.25rem 0.6rem;
   }
 }
