--- a/src/components/UI/Loading.module.css
+++ b/src/components/UI/Loading.module.css
@@ -4,8 +4,8 @@
   height: 150px;
   border-radius: 50%;
   border: 4px solid rgb(128, 15, 0);
-  border-color: rgb(128, 15, 0) rgb(128, 15, 0) rgb(128, 15, 0) transparent;
-  animation: spin 0.8s linear infinite;
+  border-color: rgb(128, 15, 0) transparent rgb(128, 15, 0) transparent;
+  animation: spin 0.7s linear infinite;
 }
 
 @keyframes spin {
